js live-reload+

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <h1>hifdf</h1>
+    <h1>hifdffgggg</h1>
 
     <script src="js/main.min.js"></script>
 </body>
