include html,js files++

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <h2>header work!</h2>
-    
+    <!--=include ./module/header.html -->
     <h1>work!!!</h1>
 <script src="js/main.min.js"></script>
 </body>
