--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header" style="background-image: url('./assets/img/1.jpg')">
         <h2 class="header__title">include header</h2>
+        <img src="./assets/img/1.jpg" alt="">
     </header>
     
     <div class="main">
