--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class="header" style="background-image: url('./assets/img/1.jpg')">
+    <header class="header">
         <h2 class="header__title">include header</h2>
-        <img src="./assets/img/1.jpg" alt="">
     </header>
     
     <div class="main">
         <div class="main__banner">
-            <svg width="175px" height="387px" viewBox="0 0 175 387" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+            <svg width="75px" height="187px" viewBox="0 0 175 387" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
                 <!-- Generator: Sketch 3.0.3 (7891) - http://www.bohemiancoding.com/sketch -->
                 <title>gulp</title>
                 <desc>Created with Sketch.</desc>
